--- a/P1/pagina_uno.html
+++ b/P1/pagina_uno.html
@@ -3,14 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>formularios_3</title>
+    <title>Formas de aplicar CSS</title>
+    <link rel="stylesheet" href="pagina_uno_estilos.css">
+    <style>
+        h1 {
+            color: blue;
+        }
+        h2 {
+            color:brown
+        }
+    </style>
 </head>
 <body>
-    <h1>Formularios III ( Algunos atributos de formularios )</h1>
+    <h1>3 Formas de aplicar CSS a una página Web</h1>
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et alias deleniti amet iste totam eligendi provident veritatis expedita exercitationem, officiis, quod dicta a tempore facere possimus cum quisquam nam sapiente.</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit esse itaque ab adipisci quo? Voluptatum repellendus laboriosam doloremque. Sint asperiores vero ratione eligendi veritatis illo sequi odio ex quod autem?</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non vitae, repellendus accusamus corrupti ipsum nemo, maxime dignissimos error excepturi perferendis dolorum. Sed, expedita tempore modi dolores incidunt unde nam. Iste?</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum, id, quasi, debitis necessitatibus aspernatur architecto voluptatem sint itaque harum reprehenderit numquam consequuntur dolorum dolorem iusto in recusandae earum sunt distinctio.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic excepturi doloremque ducimus corporis! Nihil quibusdam magnam, facilis distinctio perspiciatis blanditiis repudiandae rem deserunt maxime possimus! Veritatis hic ex excepturi reiciendis.</p>     
-    <a href="index.html">volver al inicio</a>
+    <a href="../INDICE/index.html">volver al inicio</a>
 </body>
 </html>
