--- a/P5/pagina_cinco.html
+++ b/P5/pagina_cinco.html
@@ -3,14 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>parrafos</title>
+    <title>Propiedade Google Fonts</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <style>
+       h1 {
+         font-family: "Pacifico", serif;
+         font-weight: 400;
+         font-style: normal;
+        }
+    </style>
 </head>
 <body>
-    <h1>Párrafos</h1>
+    <h1>Propiedades de fuentes y Google Fonts</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit esse itaque ab adipisci quo? Voluptatum repellendus laboriosam doloremque. Sint asperiores vero ratione eligendi veritatis illo sequi odio ex quod autem?</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non vitae, repellendus accusamus corrupti ipsum nemo, maxime dignissimos error excepturi perferendis dolorum. Sed, expedita tempore modi dolores incidunt unde nam. Iste?</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum, id, quasi, debitis necessitatibus aspernatur architecto voluptatem sint itaque harum reprehenderit numquam consequuntur dolorum dolorem iusto in recusandae earum sunt distinctio.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic excepturi doloremque ducimus corporis! Nihil quibusdam magnam, facilis distinctio perspiciatis blanditiis repudiandae rem deserunt maxime possimus! Veritatis hic ex excepturi reiciendis.</p>     
-    <a href="index.html">volver al inicio</a>
+    <a href="../INDICE/index.html">volver al inicio</a>
 </body>
 </html>
