--- a/P10/pagina_diez.html
+++ b/P10/pagina_diez.html
@@ -41,6 +41,6 @@
     <div id="caja2">
 
     </div>
-    <a href="../INDICE/index.html">volver al inicio</a>
+    <a href="../index.html">volver al inicio</a>
 </body>
 </html>
