--- a/P11/pagina_once.html
+++ b/P11/pagina_once.html
@@ -21,6 +21,6 @@
     Non molestiae commodi voluptas, tempora porro consequatur in sed, cumque quaerat vel quos a esse iste mollitia, fugit quisquam. Modi, dignissimos sequi ab quibusdam incidunt fugit iure soluta error dolorem!
     Doloribus in nobis recusandae aspernatur beatae officia, magnam eaque ratione consequuntur sed incidunt quidem laudantium veritatis consectetur eligendi ducimus tempora nihil at? Ad incidunt hic necessitatibus eaque aliquid totam sunt!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic excepturi doloremque ducimus corporis! Nihil quibusdam magnam, facilis distinctio perspiciatis blanditiis repudiandae rem deserunt maxime possimus! Veritatis hic ex excepturi reiciendis.</p>     
-    <a href="../INDICE/index.html">volver al inicio</a>
+    <a href="../index.html">volver al inicio</a>
 </body>
 </html>
