--- a/P2/pagina_dos.html
+++ b/P2/pagina_dos.html
@@ -27,6 +27,6 @@
     <h3 id="experimento_id">Selector de ID</h3>
     <h4 class="experimento_clase">Selector de clase</h4>
     <p class="experimento_clase">Este parrafo hereda la clase experimento_clase</p>
-    <a href="../INDICE/index.html">volver al inicio</a>
+    <a href="../index.html">volver al inicio</a>
 </body>
 </html>
