--- a/P3/pagina_tres.html
+++ b/P3/pagina_tres.html
@@ -37,6 +37,6 @@
     <div id="quinto">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, illum. Nihil non dolorem consequatur reprehenderit aperiam harum quaerat, fuga ducimus natus aliquid. Tenetur similique, deleniti repudiandae consectetur maiores commodi mollitia.</p>
     </div>
-    <a href="../INDICE/index.html">volver al inicio</a>
+    <a href="../index.html">volver al inicio</a>
 </body>
 </html>
