--- a/P6/pagina_seis.html
+++ b/P6/pagina_seis.html
@@ -28,6 +28,6 @@
 <body>
     <h1>Propiedades de Enlaces</h1>
     <h2><a href="">enlace 1</a></h2>
-    <a href="../INDICE/index.html">volver al inicio</a>
+    <a href="../index.html">volver al inicio</a>
 </body>
 </html>
