--- a/P7/pagina_siete.html
+++ b/P7/pagina_siete.html
@@ -24,7 +24,7 @@
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non vitae, repellendus accusamus corrupti ipsum nemo, maxime dignissimos error excepturi perferendis dolorum. Sed, expedita tempore modi dolores incidunt unde nam. Iste?</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum, id, quasi, debitis necessitatibus aspernatur architecto voluptatem sint itaque harum reprehenderit numquam consequuntur dolorum dolorem iusto in recusandae earum sunt distinctio.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic excepturi doloremque ducimus corporis! Nihil quibusdam magnam, facilis distinctio perspiciatis blanditiis repudiandae rem deserunt maxime possimus! Veritatis hic ex excepturi reiciendis.</p>     
-        <a href="../INDICE/index.html">volver al inicio</a>
+        <a href="../index.html">volver al inicio</a>
     </div>
    
         
