--- a/P9/pagina_nueve.html
+++ b/P9/pagina_nueve.html
@@ -36,6 +36,6 @@
             <td>14457</td>
         </tr>
     </table>
-    <a href="../INDICE/index.html">volver al inicio</a>
+    <a href="../index.html">volver al inicio</a>
 </body>
 </html>
