--- a/P8/pagina_ocho.html
+++ b/P8/pagina_ocho.html
@@ -14,6 +14,6 @@
     </div>
     
     <br>
-    <a href="../INDICE/index.html">volver al inicio</a>
+    <a href="../index.html">volver al inicio</a>
 </body>
 </html>
