--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 <body>
     <h1>VIDEO TUTORIALES</h1>
     <ol>
-        <li><a href="/P1/pagina_uno.html">3 Formas de aplicar CSS a una página Web</a> </li>
-        <li><a href="/P2/pagina_dos.html">Selectores </a></li>
-        <li><a href="/P3/pagina_tres.html">Unidades de Medida</a></li>
-        <li><a href="/P4/pagina_cuatro.html">Propiedades de texto</a></li>
-        <li><a href="/P5/pagina_cinco.html">Propiedades de fuentes y Google Fonts
+        <li><a href="P1/pagina_uno.html">3 Formas de aplicar CSS a una página Web</a> </li>
+        <li><a href="P2/pagina_dos.html">Selectores </a></li>
+        <li><a href="P3/pagina_tres.html">Unidades de Medida</a></li>
+        <li><a href="P4/pagina_cuatro.html">Propiedades de texto</a></li>
+        <li><a href="P5/pagina_cinco.html">Propiedades de fuentes y Google Fonts
         </a></li>
-        <li><a href="/P6/pagina_seis.html">Propiedades de Enlaces</a></li>
-        <li><a href="/P7/pagina_siete.html">Propiedades de Bordes</a></li>
-        <li><a href="/P8/pagina_ocho.html">Fontawesome. Iconos como fuentes</a></li>
-        <li><a href="/P9/pagina_nueve.html">Tablas </a></li>
-        <li><a href="/P10/pagina_diez.html">Margenes y Padding</a></li>
-        <li><a href="/P11/pagina_once.html">Backgrounds</a></li>
+        <li><a href="P6/pagina_seis.html">Propiedades de Enlaces</a></li>
+        <li><a href="P7/pagina_siete.html">Propiedades de Bordes</a></li>
+        <li><a href="P8/pagina_ocho.html">Fontawesome. Iconos como fuentes</a></li>
+        <li><a href="P9/pagina_nueve.html">Tablas </a></li>
+        <li><a href="P10/pagina_diez.html">Margenes y Padding</a></li>
+        <li><a href="P11/pagina_once.html">Backgrounds</a></li>
     </ol>
  
 </body>
